# haml

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy.yml
src/: haml.rs  haml_parser.rs  lib.rs  manifested_schema.rs
tests/: common.rs  haml.rs
tests/data/: endpoint_subscription.xml  pipeline_register.xml  schema.xml  table_team_icon.xml
